cabal-version:      3.8
name:               advent-of-code
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Trey Wood
maintainer:         edwinjwood3rd@gmail.com
category:           Tinkering
build-type:         Simple

common aoc-day
    ghc-options: -Wall
    build-depends:
        base ^>=4.17.0.0,
        advent-of-code:utils,
    default-language: GHC2021

library utils
    exposed-modules: Utils
    hs-source-dirs: src
    build-depends: base ^>=4.17.0.0,

executable day-1
    import:           aoc-day
    hs-source-dirs:   day-1
    main-is:          Main.hs

executable day-2
    import:           aoc-day
    hs-source-dirs:   day-2
    main-is:          Main.hs

executable day-3
    import:           aoc-day
    hs-source-dirs:   day-3
    main-is:          Main.hs
    build-depends:    split ^>= 0.2.3.5,

executable day-4
    import:           aoc-day
    hs-source-dirs:   day-4
    main-is:          Main.hs
    build-depends: 
      regex-compat ^>= 0.95.2.1,
      split ^>= 0.2.3.5,

executable day-5
    import:           aoc-day
    hs-source-dirs:   day-5
    main-is:          Main.hs
    build-depends:
      regex-compat ^>= 0.95.2.1,

executable day-6
    import:           aoc-day
    hs-source-dirs:   day-6
    main-is:          Main.hs
